[package]
name = "warp-askama-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.10", default-features = false, features = ["with-warp"] }
askama_warp = "0.11.0"
warp = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }